<resources>
    <string name="app_name">GroupSMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_android_demo">GROUP SMS (TAFESA)</string>
    <string name="send_text">Send</string>
    <string name="clear">Clear</string>
    <string name="title_activity_edit_message">EditMessage</string>
    <string name="edit_message">Edit your message here:</string>
    <string name="but_edit">Edit Message</string>
    <string name="btnDone">DONE</string>
    <string name="btnSendTo">Edit SendTo</string>
    <string name="title_activity_edit_send_to">EditSendTo</string>
    <string name="txtPhone">Edit Num:</string>
    <string name="btnDelete">Delete</string>
    <string name="btnEditPhone">Edit</string>
    <string name="edit_num">Edit</string>
    <string name="txt_edit_message">Press ADD to add new item</string>
    <string name="btn_task">ADD</string>
    <string name="btn_Cancel">Add New</string>
    <string name="btn_update">Update Entry 1</string>
</resources>
