<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_text" />

        <Button
            android:id="@+id/butEditMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_edit" />


        <Button
            android:id="@+id/btnEditSendTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSendTo"
            android:textSize="16sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="TextView" />
</LinearLayout>
